<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/toolbar_color"
        android:id="@+id/container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="15dp"
            android:textColor="@color/background"
            android:layout_centerVertical="true"
            android:id="@+id/exit_button"
            android:text="@string/exit_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_dialog_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/personal_info_item5"
                android:layout_margin="5dp"/>
            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:weightSum="3"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/personal_info_item6"
                    android:background="@drawable/personal_button_bg"
                    android:textColor="@color/personal_btn_selector"
                    android:id="@+id/personal_btn1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/personal_button_bg2"
                    android:textColor="@color/personal_btn_selector"
                    android:text="@string/personal_info_item7"
                    android:id="@+id/personal_btn2"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/personal_button_bg3"
                    android:textColor="@color/personal_btn_selector"
                    android:text="@string/personal_info_item8"
                    android:id="@+id/personal_btn3"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_dialog_item1"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="5dp"/>
            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:background="@drawable/toggle_selector"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3"
            android:weightSum="3">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"

                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/search_dialog_item2"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"

                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/search_dialog_item3"
                    android:layout_marginRight="5dp"/>
                <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rangeseekbar"
                    rsb:absoluteMinValue="10"
                    rsb:absoluteMaxValue="150" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@color/search_bottom_bg_color">
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/searchPeople"
                android:text="@string/search_dialog_button"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@drawable/search_dialog_button_bg"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>