<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hoang.datingproject.Activity.PersonalInfoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/toolbar_color"
        android:id="@+id/container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textColor="@color/background"
            android:id="@+id/exit_button"
            android:text="@string/left_arrow_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_save"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:layout_centerVertical="true"
            android:id="@+id/save"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="17">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/header_color">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personal_info_item1"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/inbox_item_background"
                    android:src="@drawable/hehe"
                    android:id="@+id/avatar"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/avatar"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personal_info_item2"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personal_info_item3"
                    android:layout_margin="5dp"
                    android:id="@+id/name"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personal_info_item4"
                    android:id="@+id/nickname"
                    android:background="@android:color/transparent"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personal_info_item5"
                    android:layout_margin="5dp"/>
                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:weightSum="3"
                    android:layout_margin="5dp"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:text="@string/personal_info_item6"
                        android:background="@drawable/personal_button_bg"
                        android:textColor="@color/personal_btn_selector"
                        android:id="@+id/personal_btn1"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:background="@drawable/personal_button_bg2"
                        android:textColor="@color/personal_btn_selector"
                        android:text="@string/personal_info_item7"
                        android:id="@+id/personal_btn2"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:background="@drawable/personal_button_bg3"
                        android:textColor="@color/personal_btn_selector"
                        android:text="@string/personal_info_item8"
                        android:id="@+id/personal_btn3"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personal_info_item9"
                    android:layout_margin="5dp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:id="@+id/old"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="20"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personal_info_item10"
                    android:layout_margin="5dp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personal_info_item11"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="5">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/header_color">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personal_info_item12"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:padding="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="5"
                    android:padding="10dp"
                    android:id="@+id/editInfo"
                    android:background="@drawable/messages_edittext_bg"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="97/100"
                    android:id="@+id/length"
                    android:textColor="@color/messages_button_bg"
                    android:layout_marginTop="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/length"
                    android:background="@color/header_color">
                </View>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
