<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/toolbar_color"
        android:id="@+id/container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="15dp"
            android:textColor="@color/background"
            android:layout_centerVertical="true"
            android:id="@+id/exit_button"
            android:text="@string/exit_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/post"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginRight="10dp"
            android:text="@string/write_note_dialog_post"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="50"
            android:gravity="top"
            android:id="@+id/reply_item"
            android:background="@android:color/transparent"
            android:windowSoftInputMode="stateHidden|adjustPan"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="20dp"
            android:text="200/200"/>
    </RelativeLayout>
</LinearLayout>